exam/YAML-STANTARD/fastapi-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fastapi-ingress
  namespace: standard
spec:
  ingressClassName: traefik
  rules:
  - host: exam.jacadatascientest.ip-ddns.com  
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: fastapi
            port:
              number: 5000
